crates/musli-web-macros/tests/ui/event-error.stderr
error: Only one lifetime parameter is supported for an `Event` impl
 --> tests/ui/event-error.rs:5:18
  |
5 |         impl<'a, 'b> Event for String;
  |                  ^^

error: Only one lifetime parameter is supported for an `Event` impl
  --> tests/ui/event-error.rs:11:14
   |
11 |         impl<T> Event for String;
   |              ^
